--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@storybook/react": "^5.3.18",
     "@storybook/theming": "^5.3.18",
     "babel-loader": "8.1.0",
+    "css-loader": "^3.6.0",
     "html-webpack-plugin": "^4.2.0",
     "styled-components": "^5.1.1",
     "webpack": "4.42.1",
